--- a/watch-together.html
+++ b/watch-together.html
@@ -11,11 +11,12 @@
         var link = document.createElement('link');
         link.type = 'text/css';
         link.rel = 'stylesheet';
-        if (window.matchMedia && window.matchMedia("(prefers-color-scheme: dark)").matches) {
+        /*if (window.matchMedia && window.matchMedia("(prefers-color-scheme: dark)").matches) {
             link.href = "https://unpkg.com/ant-design-vue@3.2.12/dist/antd.dark.min.css";
         } else {
             link.href = "https://unpkg.com/ant-design-vue@3.2.12/dist/antd.min.css";
-        }
+        }*/
+        link.href = "https://unpkg.com/ant-design-vue@3.2.12/dist/antd.dark.min.css";
         head.appendChild(link);
     </script>
 
@@ -39,10 +40,8 @@
         .box {
             width: 100%;
             height: 100;
-            background: rgba(0, 0, 0, 0.1);
             margin: 0 auto;
             overflow: hidden;
-            background: rgba(0, 0, 0, 0.1);
             background-size: cover;
             position: absolute;
             top: 0;
@@ -63,10 +62,40 @@
             line-height: 20px;
             margin-bottom: 10px;
             transform: translateX(100%);
-            text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
-            /*color: brown;
+            /*text-stroke: 1px black;
+            -webkit-text-stroke: 1px black;
+            color: brown;
             text-shadow: 2px 2px 3px rgb(248, 81, 20);*/
             animation: scrollTo linear 7s
+        }
+
+        .event-through {
+            pointer-events: none;
+        }
+
+        .user-0 {
+            color: white !important;
+            text-shadow: 0 0 5px black;
+        }
+
+        .user-1 {
+            color: #FFC9D8 !important;
+            text-shadow: 0 0 5px #A41F45;
+        }
+
+        .user-2 {
+            color: #BEE8FF !important;
+            text-shadow: 0 0 5px #1D4B66;
+        }
+
+        .user-3 {
+            color: #BEFFE7 !important;
+            text-shadow: 0 0 5px #265D49;
+        }
+
+        .user-4 {
+            color: #FFF0C4 !important;
+            text-shadow: 0 0 5px #9D780C;
         }
 
         @keyframes scrollTo {
@@ -84,7 +113,7 @@
                 {{ roomName }}
             </a-typography-title>
             <a-typography-paragraph v-if="roomMembers.length">
-                <span v-for="member in roomMembers"><b>{{ member }}</b>, </span>
+                <span v-for="(member, i) in roomMembers"><b :class="`user-${i}`">{{ member }}</b>, </span>
                 <span>{{ tr("is in room now.") }}</span>
             </a-typography-paragraph>
             <a-layout id="player">
@@ -93,10 +122,10 @@
                         preload="auto">
                     </video>
 
-                    <div class="box">
-                        <div class="track track-top"></div>
-                        <div class="track" v-for="comment in comments" :key="comment.time">
-                            <a-typography-title class="child" :level="2">
+                    <div class="box event-through">
+                        <div class="track track-top event-through"></div>
+                        <div class="track event-through" v-for="comment in comments" :key="comment.time">
+                            <a-typography-title :class="`child user-${comment.userIndex} event-through`" :level="2">
                                 {{ comment.text }}
                             </a-typography-title>
                         </div>
@@ -119,7 +148,7 @@
         </a-spin>
         <a-modal v-model:visible="modelVisible" :title="tr('Who are you?')" :closable="false" :maskClosable="false"
             :keyboard="false" :mask-closable="false">
-            <a-input v-model:value="userName"></a-input>
+            <a-input v-model:value="userName" @press-enter="submitName"></a-input>
             <template #footer>
                 <a-button key="ok" type="primary" @click="submitName" :disabled="userName===''">
                     {{ tr("Join!") }}
@@ -148,9 +177,15 @@
                 " lefted": " 离开了",
                 " played the video": " 播放了视频",
                 " paused the video": " 暂停了视频",
+                " adjusted video progress": "调整了视频进度",
             }
         }
         const LocalStrings = Strings[navigator.language]
+
+        antd.message.config({
+            top: '50px',
+            getContainer: () => document.getElementById("my-player"),
+        });
 
         Vue.createApp({
             data() {
@@ -188,7 +223,7 @@
                         this.spinTip = this.tr("Fetching room information...");
 
                         user.on(AV.Event.MESSAGE, (message, conversation) => {
-                            this.showComment(message.text);
+                            this.showComment(message.text, message.from);
                         });
                         user.on(AV.Event.MEMBERS_JOINED, (payload, conversation) => {
                             if (conversation.id === Conversation.id) {
@@ -216,7 +251,11 @@
                             console.log(payload);
                             if (payload.updatedBy !== this.userName) {
                                 if (Conversation.get("videoState") === "play") {
-                                    antd.message.open({ content: payload.updatedBy + this.tr(" played the video") });
+                                    if (Player.paused()) {
+                                        antd.message.open({ content: payload.updatedBy + this.tr(" played the video") });
+                                    } else if (!this.videoPositionMatched()) {
+                                        antd.message.open({ content: payload.updatedBy + this.tr(" adjusted video progress") });
+                                    }
                                 } else if (Conversation.get("videoState") === "pause") {
                                     antd.message.open({ content: payload.updatedBy + this.tr(" paused the video") });
                                 }
@@ -233,8 +272,15 @@
 
                         Conversation = conversation;
                         this.roomName = this.tr("Now Playing: ") + conversation.name;
-                        this.roomMembers = conversation.members;
                         document.title = this.roomName
+
+                        for (let member of conversation.members) {
+                            if (member === this.userName) {
+                                this.roomMembers.unshift(member);
+                            } else {
+                                this.roomMembers.push(member);
+                            }
+                        }
 
                         Player = videojs('my-player', {
                             "userActions": { "doubleClick": false },
@@ -249,6 +295,8 @@
                             Player.on("play", () => {
                                 if (Conversation.get("videoState") !== "play") {
                                     Conversation.set("videoState", "play");
+                                    Conversation.set("videoPosition", Player.currentTime());
+                                    Conversation.set("videoTimestampMs", Date.now());
                                     Conversation.save();
                                 }
                             });
@@ -256,6 +304,15 @@
                                 if (Conversation.get("videoState") !== "pause") {
                                     Conversation.set("videoState", "pause");
                                     Conversation.set("videoPosition", Player.currentTime());
+                                    Conversation.set("videoTimestampMs", Date.now());
+                                    Conversation.save();
+                                }
+                            });
+                            Player.on("seeked", () => {
+                                if (!Player.paused() && !this.videoPositionMatched()) {
+                                    Conversation.set("videoState", "play");
+                                    Conversation.set("videoPosition", Player.currentTime());
+                                    Conversation.set("videoTimestampMs", Date.now());
                                     Conversation.save();
                                 }
                             });
@@ -263,6 +320,12 @@
                             this.spinning = false;
                         });
                     }).catch(console.error);
+                },
+                remoteCurrentTime() {
+                    return Conversation.get("videoPosition") + (Date.now() - Conversation.get("videoTimestampMs")) / 1000;
+                },
+                videoPositionMatched() {
+                    return Math.abs(this.remoteCurrentTime() - Player.currentTime()) < 3;
                 },
                 toggleFullscreen() {
                     if (!document.fullscreenElement) {
@@ -274,12 +337,19 @@
                         document.exitFullscreen();
                     }
                 },
-                showComment(commentText) {
+                showComment(commentText, from) {
+                    from = from || this.userName;
+                    let userIndex;
+                    for (userIndex in this.roomMembers) {
+                        if (this.roomMembers[userIndex] === from) break;
+                    }
+
                     for (let i in this.comments) {
                         if (Date.now() - this.comments[i].time >= 7000) {
                             this.comments.splice(i, 1, {
                                 time: Date.now(),
                                 text: commentText,
+                                userIndex,
                             })
                             return;
                         }
@@ -287,6 +357,7 @@
                     this.comments.push({
                         time: Date.now(),
                         text: commentText,
+                        userIndex,
                     });
                 },
                 sendComment() {
@@ -297,11 +368,14 @@
                     }
                 },
                 syncConversationState() {
-                    Player.currentTime(Conversation.get("videoPosition"));
                     if (Conversation.get("videoState") === "play") {
+                        if (!this.videoPositionMatched()) {
+                            Player.currentTime(this.remoteCurrentTime());
+                        }
                         Player.play();
                     } else if (Conversation.get("videoState") === "pause") {
                         Player.pause();
+                        Player.currentTime(Conversation.get("videoPosition"));
                     }
                 },
             },
@@ -316,7 +390,7 @@
         }).use(antd).mount('#app')
 
         window.onbeforeunload = event => {
-            Conversation.quit();
+            if (Conversation) Conversation.quit();
         }
     </script>
 </body>
