--- a/watch-together.html
+++ b/watch-together.html
@@ -41,6 +41,7 @@
             width: 800px;
             margin: auto;
         }
+
         .box {
             width: 100%;
             height: 100;
@@ -179,11 +180,12 @@
                 "Fetching room information...": "正在获取房间信息……",
                 "Joining room...": "正在加入房间……",
                 "Loading media...": "正在加载媒体……",
-                " joined": " 加入了",
-                " lefted": " 离开了",
+                "Unable to load media.": "无法加载媒体。",
+                " joined": " 已加入",
+                " lefted": " 已离开",
                 " played the video": " 播放了视频",
                 " paused the video": " 暂停了视频",
-                " adjusted video progress": "调整了视频进度",
+                " adjusted video progress": " 调整了视频进度",
             }
         }
         const LocalStrings = Strings[navigator.language]
@@ -325,8 +327,12 @@
                                     Conversation.save();
                                 }
                             });
-
-                            this.spinning = false;
+                            Player.on("canplaythrough", () => {
+                                this.spinning = false;
+                            });
+                            Player.on("error", () => {
+                                this.spinTip = this.tr("Unable to load media.");
+                            });
                         });
                     }).catch(console.error);
                 },
