--- a/watch-together.html
+++ b/watch-together.html
@@ -127,12 +127,13 @@
                 "Fetching room information...": "正在获取房间信息……",
                 "Joining room...": "正在加入房间……",
                 "Loading media...": "正在加载媒体……",
-                "Unable to load media.": "无法加载媒体。",
                 " joined": " 已加入",
                 " lefted": " 已离开",
                 " played the video": " 播放了视频",
                 " paused the video": " 暂停了视频",
                 " adjusted video progress": " 调整了视频进度",
+                "Failed to load media.": "加载媒体失败。",
+                "Failed to join: Room was closed.": "加入失败：房间已关闭。",
                 "Failed to send. Please refresh and try again.": "发送失败。请刷新并重试。",
                 "Failed to load. Please refresh and try again.": "载入失败。请刷新并重试。",
             }
@@ -234,21 +235,21 @@
                             }
                         });
 
-                        return AV.Cloud.run("getConversation", {
-                            roomNumber: UrlParams.get("room")
-                        })
-                    }).then(conversationInfo => {
-                        if (!conversationInfo) {
-                            return Promise.reject(new Error('room no longer exists.'));
-                        }
-                        return User.getConversation(conversationInfo.objectId)
+                        const query = User.getQuery();
+                        query.equalTo("roomNumber", UrlParams.get("room"));
+                        return query.first();
                     }).then(conversation => {
+                        if (!conversation) {
+                            return Promise.reject(new Error(Tr("Failed to join: Room was closed.")));
+                        }
+                        Conversation = conversation;
+
                         this.spinTip = Tr("Joining room...");
+
                         return conversation.join();
                     }).then(conversation => {
                         this.spinTip = Tr("Loading media...");
 
-                        Conversation = conversation;
                         this.roomName = Tr("Now Playing: ") + conversation.name;
                         document.title = this.roomName
 
@@ -298,12 +299,12 @@
                                 this.spinning = false;
                             });
                             Player.on("error", () => {
-                                this.spinTip = Tr("Unable to load media.");
+                                this.spinTip = Tr("Failed to load media.");
                             });
                         });
                     }).catch(err => {
-                        antd.message.error(Tr("Failed to load. Please refresh and try again."));
                         console.error(err);
+                        this.spinTip = err.toString();
                     });
                 },
                 remoteCurrentTime() {
