--- a/watch-together.html
+++ b/watch-together.html
@@ -5,8 +5,7 @@
     <meta charset="utf-8">
     <title>Joining Room...</title>
 
-    <script src="js/im-browser.min.js"></script>
-    <script src="js/av-min.js"></script>
+    <script src="https://code.bdstatic.com/npm/leancloud-realtime@5.0.0-rc.7/dist/im-browser.min.js"></script>
 
     <script src="https://unpkg.com/vue@3.2.40/dist/vue.global.prod.js"></script>
 
