--- a/player.html
+++ b/player.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>M3U8 Player</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <style>
         body {
             width: 70%;
